fixed layout issues

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body {
 
 .updateWarning {
   background-color: #d0ebf0;
+  padding: 5px 20px;
+  box-sizing: border-box;
   color: #3f767f;
   width: 100%;
   border-radius: 15px;
@@ -70,8 +72,7 @@ canvas {
 .transparent {
   background: transparent;
   /* color: transparent; */
-  font-size: xx-large;
-  color: transparent;
+  font-size: xx-large;  color: transparent;
 }
 
 #backButton {
@@ -102,6 +103,7 @@ canvas {
 }
 
 .leftOverlay {
+  overflow-y: scroll;
   outline: rgb(255, 229, 245, 0.8) solid 10px;
   background-color: #fff6fd;
   width: 55vw;
@@ -161,8 +163,9 @@ canvas {
   object-fit: cover;
 }
 
-.overlay h1 {
+.leftOverlay h1 {
   padding: 10px 20px;
+  margin: 0; 
   color: #df00a3;
 }
 
